# razer-effect

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  razer-effect-gui.desktop  razer-effect.service  uninstall.sh
.github/: CODEOWNERS  pull_request_template.md
src/razer_effect/: config.py  device.py  gui.py  inotify.py  main.py
src/razer_effect/effects/: __init__.py  key_shuffle.py  palette.py  static_color.py  wave.py
