[project]
name = "razer-effect"
version = "0.1.0"
description = "Per-key random RGB effects with smooth fades for Razer keyboards via OpenRazer"
requires-python = ">=3.10"
license = "MIT"
# Note: python3-openrazer and python3-numpy are system packages (not on PyPI).
# They must be installed via your distro's package manager before using this tool.
dependencies = []

[project.scripts]
razer-effect = "razer_effect.main:main"
razer-effect-gui = "razer_effect.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/razer_effect"]
